[package]
name = "rust-eth-chart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
reqwest = { version = "0.11.9", features = ["json"] }
serde = "1.0.135"
serde_json = "1.0.78"
tokio = { version = "1.15.0", features = ["full"] }
tui = "0.17.0"
